--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -194,6 +194,100 @@
 				<li id="note-33" epub:type="rearnote">
 					<p>“An <span epub:type="z3998:nationality">English</span> gentleman, at the opening of the great day⁠—<abbr>i.e.</abbr> on <span epub:type="z3998:event">Christmas</span> Day in the morning⁠—had all his tenants and neighbors enter his hall by daybreak. The strong beer was broached, and the blackjacks went plentifully about, with toast, sugar and nutmeg, and good Cheshire cheese. The Hackin (the great sausage) must be boiled by daybreak, or else two young men must take the maiden (<abbr>i.e.</abbr> the cook) by the arms and run her round the marketplace till she is shamed of her laziness.”⁠—Round about our Sea-Coal Fire. <a href="../text/christmas-day.xhtml#noteref-33" epub:type="se:referrer">↩</a></p>
 				</li>
+				<li id="note-34" epub:type="rearnote">
+					<p><cite>Sir John Suckling</cite>. <a href="../text/the-christmas-dinner.xhtml#noteref-34" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-35" epub:type="rearnote">
+					<p>The old ceremony of serving up the boar’s head on <span epub:type="z3998:event">Christmas</span> Day is still observed in the hall of Queen’s College, Oxford. I was favored by the parson with a copy of the carol as now sung, and as it may be acceptable to such of my readers as are curious in these grave and learned matters, I give it entire.</p>
+					<blockquote epub:type="z3998:song">
+						<p>
+							<span>The boar’s head in hand bear I,</span>
+							<br/>
+							<span>Bedeck’d with bays and rosemary;</span>
+							<br/>
+							<span>And I pray you, my masters, be merry</span>
+							<br/>
+							<span class="i1">Quot estis in convivio.</span>
+							<br/>
+							<spam class="i2">Caput apri defero,</spam>
+							<br/>
+							<span class="i2">Reddens laudes domino.</span>
+						</p>
+						<p>
+							<span>The boar’s head, as I understand,</span>
+							<br/>
+							<span>Is the rarest dish in all this land,</span>
+							<br/>
+							<span>Which thus bedeck’d with a gay garland</span>
+							<br/>
+							<span class="i1">Let us servire cantico.</span>
+							<br/>
+							<span class="i2">Caput apri defero, <abbr class="eoc">etc.</abbr></span>
+						</p>
+						<p>
+							<span>Our steward hath provided this</span>
+							<br/>
+							<span>In honor of the King of Bliss,</span>
+							<br/>
+							<span>Which on this day to be served is</span>
+							<br/>
+							<span class="i1">In Reginensi Atrio.</span>
+							<br/>
+							<span class="i2">Caput apri defero,</span>
+							<br/>
+							<span class="i7"><abbr>etc.</abbr>, <abbr>etc.</abbr>, <abbr class="eoc">etc.</abbr> <a href="../text/the-christmas-dinner.xhtml#noteref-35" epub:type="se:referrer">↩</a></span>
+						</p>
+					</blockquote>
+				</li>
+				<li id="note-36" epub:type="rearnote">
+					<p>The peacock was anciently in great demand for stately entertainments. Sometimes it was made into a pie, at one end of which the head appeared above the crust in all its plumage, with the beak richly gilt; at the other end the tail was displayed. Such pies were served up at the solemn banquets of chivalry, when knights-errant pledged themselves to undertake any perilous enterprise, whence came the ancient oath, used by Justice Shallow, “by cock and pie.”</p>
+					<p>The peacock was also an important dish for the <span epub:type="z3998:event">Christmas</span> feast; and Massinger, in his <i epub:type="se:name.publication.play">City Madam</i>, gives some idea of the extravagance with which this, as well as other dishes, was prepared for the gorgeous revels of the olden times:—</p>
+					<blockquote epub:type="z3998:verse">
+						<p>
+							<span>Men may talk of Country Christmasses,</span>
+							<br/>
+							<span>Their thirty pound butter’d eggs, their pies of carps’ tongues;</span>
+							<br/>
+							<span>Their pheasants drench’d with ambergris: <em>the carcases of three fat wethers bruised for gravy to make sauce for a single peacock.</em> <a href="../text/the-christmas-dinner.xhtml#noteref-36" epub:type="se:referrer">↩</a></span>
+						</p>
+					</blockquote>
+				</li>
+				<li id="note-37" epub:type="rearnote">
+					<p>The Wassail Bowl was sometimes composed of ale instead of wine, with nutmeg, sugar, toast, ginger, and roasted crabs; in this way the nut-brown beverage is still prepared in some old families and round the hearths of substantial farmers at <span epub:type="z3998:event">Christmas</span>. It is also called Lamb’s Wool, and is celebrated by Herrick in his “<span epub:type="se:name.publication.poem">Twelfth Night</span>”:</p>
+					<blockquote>
+						<p>
+							<span class="i1">Next crowne the bowle full</span>
+							<br/>
+							<span class="i1">With gentle Lamb’s Wool;</span>
+							<br/>
+							<span>Add sugar, nutmeg, and ginger</span>
+							<br/>
+							<span class="i1">With store of ale too;</span>
+							<br/>
+							<span class="i1">And thus ye must doe</span>
+							<br/>
+							<span>To make the Wassaile a swinger. <a href="../text/the-christmas-dinner.xhtml#noteref-37" epub:type="se:referrer">↩</a></span>
+						</p>
+					</blockquote>
+				</li>
+				<li id="note-38" epub:type="rearnote">
+					<p>“The custom of drinking out of the same cup gave place to each having his cup. When the steward came to the doore with the Wassel, he was to cry three times, Wassel, Wassel, Wassel, and then the chappell (chaplain) was to answer with a song.”⁠—<cite>Archaeologia</cite>. <a href="../text/the-christmas-dinner.xhtml#noteref-38" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-39" epub:type="rearnote">
+					<p>From <cite>Poor Robin’s Almanack</cite>. <a href="../text/the-christmas-dinner.xhtml#noteref-39" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-40" epub:type="rearnote">
+					<p>At <span epub:type="z3998:event">Christmasse</span> there was in the Kinges house, wheresoever hee was lodged, a lorde of misrule or mayster of merie disportes, and the like had ye in the house of every nobleman of honor, or good worshipper were he spirituall or temporall.⁠—<cite>Stowe</cite>. <a href="../text/the-christmas-dinner.xhtml#noteref-40" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-41" epub:type="rearnote">
+					<p>Maskings or mummeries were favorite sports at <span epub:type="z3998:event">Christmas</span> in old times, and the wardrobes at halls and manor-houses were often laid under contribution to furnish dresses and fantastic disguisings. I strongly suspect Master Simon to have taken the idea of his from Ben Jonson’s <i epub:type="se:name.publication.play">Masque of Christmas</i>. <a href="../text/the-christmas-dinner.xhtml#noteref-41" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-42" epub:type="rearnote">
+					<p>Sir John Hawkins, speaking of the dance called the Pavon, from pavo, a peacock, says, “It is a grave and majestic dance; the method of dancing it anciently was by gentlemen dressed with caps and swords, by those of the long robe in their gowns, by the peers in their mantles, and by the ladies in gowns with long trains, the motion whereof, in dancing, resembled that of a peacock.”⁠—<cite><i epub:type="se:name.publication.book">History of Music</i></cite>. <a href="../text/the-christmas-dinner.xhtml#noteref-42" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-43" epub:type="rearnote">
+					<p>At the time of the first publication of this paper the picture of an old-fashioned <span epub:type="z3998:event">Christmas</span> in the country was pronounced by some as out of date. The author had afterwards an opportunity of witnessing almost all the customs above described, existing in unexpected vigor in the skirts of <span epub:type="z3998:place">Derbyshire</span> and <span epub:type="z3998:place">Yorkshire</span>, where he passed the <span epub:type="z3998:event">Christmas</span> holidays. The reader will find some notice of them in the author’s account of his sojourn at Newstead Abbey. <a href="../text/the-christmas-dinner.xhtml#noteref-43" epub:type="se:referrer">↩</a></p>
+				</li>
 			</ol>
 		</section>
 	</body>
