--- a/src/epub/text/london-antiques.xhtml
+++ b/src/epub/text/london-antiques.xhtml
@@ -1,22 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>Chapter 26</title>
+		<title>London Antiques</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="chapter-26" epub:type="chapter">
-			<h2>LONDON ANTIQUES.</h2>
-			<pre xml:space="preserve"> ⸺⁠I do walk Methinks like Guide Vaux, with my dark lanthorn, Stealing to set the town o’ fire; i’ th’ country I should be taken for William o’ the Wisp, Or Robin Goodfellow. FLETCHER. </pre>
-			<div class="figleft" style="width:15%;">
-				<img alt="9329m " src="images/9329m.jpg" width="100%"/>
-				<br/>
-				<a href="images/9329.jpg">
-					<i>Original</i>
-				</a>
-			</div>
-			<p>I AM somewhat of an antiquity-hunter, and am fond of exploring London in quest of the relics of old times. These are principally to be found in the depths of the city, swallowed up and almost lost in a wilderness of brick and mortar, but deriving poetical and romantic interest from the commonplace, prosaic world around them. I was struck with an instance of the kind in the course of a recent summer ramble into the city; for the city is only to be explored to advantage in summertime, when free from the smoke and fog and rain and mud of winter. I had been buffeting for some time against the current of population setting through Fleet Street. The warm weather had unstrung my nerves and made me sensitive to every jar and jostle and discordant sound. The flesh was weary, the spirit faint, and I was getting out of humor with the bustling busy throng through which I had to struggle, when in a fit of desperation I tore my way through the crowd, plunged into a by-lane, and, after passing through several obscure nooks and angles, emerged into a quaint and quiet court with a grassplot in the centre overhung by elms, and kept perpetually fresh and green by a fountain with its sparkling jet of water. A student with book in hand was seated on a stone bench, partly reading, partly meditating on the movements of two or three trim nursery-maids with their infant charges.</p>
+		<section id="london-antiques" epub:type="volume se:short-story">
+			<header>
+				<h2 epub:type="title"><span epub:type="z3998:place">London</span> Antiques</h2>
+				<blockquote epub:type="epigraph z3998:poem">
+					<p>
+						<span class="i7">—⁠I do walk</span>
+						<br/>
+						<span>Methinks like Guide Vaux, with my dark lanthorn,</span>
+						<br/>
+						<span>Stealing to set the town o’ fire; i’ th’ country</span>
+						<br/>
+						<span>I should be taken for William o’ the Wisp,</span>
+						<br/>
+						<span>Or Robin Goodfellow.</span>
+					</p>
+					<cite>Fletcher</cite>
+				</blockquote>
+			</header>
+			<p>I am somewhat of an antiquity-hunter, and am fond of exploring <span epub:type="z3998:place">London</span> in quest of the relics of old times. These are principally to be found in the depths of the city, swallowed up and almost lost in a wilderness of brick and mortar, but deriving poetical and romantic interest from the commonplace, prosaic world around them. I was struck with an instance of the kind in the course of a recent summer ramble into the city; for the city is only to be explored to advantage in summertime, when free from the smoke and fog and rain and mud of winter. I had been buffeting for some time against the current of population setting through Fleet Street. The warm weather had unstrung my nerves and made me sensitive to every jar and jostle and discordant sound. The flesh was weary, the spirit faint, and I was getting out of humor with the bustling busy throng through which I had to struggle, when in a fit of desperation I tore my way through the crowd, plunged into a by-lane, and, after passing through several obscure nooks and angles, emerged into a quaint and quiet court with a grassplot in the centre overhung by elms, and kept perpetually fresh and green by a fountain with its sparkling jet of water. A student with book in hand was seated on a stone bench, partly reading, partly meditating on the movements of two or three trim nursery-maids with their infant charges.</p>
 			<p>I was like an Arab who had suddenly come upon an oasis amid the panting sterility of the desert. By degrees the quiet and coolness of the place soothed my nerves and refreshed my spirit. I pursued my walk, and came, hard by, to a very ancient chapel with a low-browed Saxon portal of massive and rich architecture. The interior was circular and lofty and lighted from above. Around were monumental tombs of ancient date on which were extended the marble effigies of warriors in armor. Some had the hands devoutly crossed upon the breast; others grasped the pommel of the sword, menacing hostility even in the tomb, while the crossed legs of several indicated soldiers of the Faith who had been on crusades to the Holy Land.</p>
 			<p>I was, in fact, in the chapel of the Knights Templars, strangely situated in the very centre of sordid traffic; and I do not know a more impressive lesson for the many of the world than thus suddenly to turn aside from the highway of busy money-seeking life, and sit down among these shadowy sepulchres, where all is twilight, dust, and forget-fullness.</p>
 			<p>In a subsequent tour of observation I encountered another of these relics of a “foregone world” locked up in the heart of the city. I had been wandering for some time through dull monotonous streets, destitute of anything to strike the eye or excite the imagination, when I beheld before me a Gothic gateway of mouldering antiquity. It opened into a spacious quadrangle forming the courtyard of a stately Gothic pile, the portal of which stood invitingly open.</p>
@@ -30,30 +38,12 @@
 			<p>I approached to regard more narrowly this mystic chamber, which seemed a fitting laboratory for a necromancer, when I was startled at beholding a human countenance staring at me from a dusky corner. It was that of a small, shrivelled old man with thin cheeks, bright eyes, and gray, wiry, projecting eyebrows. I at first doubted whether it were not a mummy curiously preserved, but it moved, and I saw that it was alive. It was another of these black-cloaked old men, and, as I regarded his quaint physiognomy, his obsolete garb, and the hideous and sinister objects by which he was surrounded, I began to persuade myself that I had come upon the arch-mage who ruled over this magical fraternity.</p>
 			<p>Seeing me pausing before the door, he rose and invited me to enter. I obeyed with singular hardihood, for how did I know whether a wave of his wand might not metamorphose me into some strange monster or conjure me into one of the bottles on his mantelpiece? He proved, however, to be anything but a conjurer, and his simple garrulity soon dispelled all the magic and mystery with which I had enveloped this antiquated pile and its no less antiquated inhabitants.</p>
 			<p>It appeared that I had made my way into the centre of an ancient asylum for superannuated tradesmen and decayed householders, with which was connected a school for a limited number of boys. It was founded upwards of two centuries since on an old monastic establishment, and retained somewhat of the conventual air and character. The shadowy line of old men in black mantles who had passed before me in the hall, and whom I had elevated into magi, turned out to be the pensioners returning from morning, service in the chapel.</p>
-			<p>John Hallum, the little collector of curiosities whom I had made the arch magician, had been for six years a resident of the place, and had decorated this final nestling-place of his old age with relics and rarities picked up in the course of his life. According to his own account, he had been somewhat of a traveller, having been once in France, and very near making a visit to Holland. He regretted not having visited the latter country, “as then he might have said he had been there.” He was evidently a traveller of the simple kind.</p>
+			<p>John Hallum, the little collector of curiosities whom I had made the arch magician, had been for six years a resident of the place, and had decorated this final nestling-place of his old age with relics and rarities picked up in the course of his life. According to his own account, he had been somewhat of a traveller, having been once in <span epub:type="z3998:place">France</span>, and very near making a visit to <span epub:type="z3998:place">Holland</span>. He regretted not having visited the latter country, “as then he might have said he had been there.” He was evidently a traveller of the simple kind.</p>
 			<p>He was aristocratical too in his notions, keeping aloof, as I found, from the ordinary run of pensioners. His chief associates were a blind man who spoke Latin and Greek, of both which languages Hallum was profoundly ignorant, and a broken-down gentleman who had run through a fortune of forty thousand pounds left him by his father, and ten thousand pounds, the marriage portion of his wife. Little Hallum seemed to consider it an indubitable sign of gentle blood as well as of lofty spirit to be able to squander such enormous sums.</p>
-			<p><abbr>P.S.</abbr>⁠—The picturesque remnant of old times into which I have thus beguiled the reader is what is called the Charter House, originally the Chartreuse. It was founded in 1611, on the remains of an ancient convent, by Sir Thomas Sutton, being one of those noble charities set on foot by individual munificence, and kept up with the quaintness and sanctity of ancient times amidst the modern changes and innovations of London. Here eighty broken-down men, who have seen better days, are provided in their old age with food, clothing, fuel, and a yearly allowance for private expenses. They dine together, as did the monks of old, in the hall which had been the refectory of the original convent. Attached to the establishment is a school for forty-four boys.</p>
+			<p epub:type="z3998:postscript"><abbr class="initialism">PS</abbr>⁠—The picturesque remnant of old times into which I have thus beguiled the reader is what is called the Charter House, originally the Chartreuse. It was founded in 1611, on the remains of an ancient convent, by Sir Thomas Sutton, being one of those noble charities set on foot by individual munificence, and kept up with the quaintness and sanctity of ancient times amidst the modern changes and innovations of <span epub:type="z3998:place">London</span>. Here eighty broken-down men, who have seen better days, are provided in their old age with food, clothing, fuel, and a yearly allowance for private expenses. They dine together, as did the monks of old, in the hall which had been the refectory of the original convent. Attached to the establishment is a school for forty-four boys.</p>
 			<p>Stow, whose work I have consulted on the subject, speaking of the obligations of the gray-headed pensioners, says, “They are not to intermeddle with any business touching the affairs of the hospital, but to attend only to the service of God, and take thankfully what is provided for them, without muttering, murmuring, or grudging. None to wear weapon, long hair, colored boots, spurs, or colored shoes, feathers in their hats, or any ruffian-like or unseemly apparel, but such as becomes hospital-men to wear.” “And in truth,” adds Stow, “happy are they that are so taken from the cares and sorrows of the world, and fixed in so good a place as these old men are; having nothing to care for but the good of their souls, to serve God, and to live in brotherly love.”</p>
-			<p>For the amusement of such as have been interested by the preceding sketch, taken down from my own observation, and who may wish to know a little more about the mysteries of London, I subjoin a modicum of local history put into my hands by an odd-looking old gentleman, in a small brown wig and a snuff-colored coat, with whom I became acquainted shortly after my visit to the Charter House. I confess I was a little dubious at first whether it was not one of those apocryphal tales often passed off upon inquiring travellers like myself, and which have brought our general character for veracity into such unmerited reproach. On making proper inquiries, however, I have received the most satisfactory assurances of the author’s probity, and indeed have been told that he is actually engaged in a full and particular account of the very interesting region in which he resides, of which the following may be considered merely as a foretaste.</p>
-			<div class="fig" style="width:35%;">
-				<img alt="0336m " src="images/0336m.jpg" width="100%"/>
-				<br/>
-			</div>
-			<h5>
-				<a href="images/0336.jpg">
-					<i>Original</i>
-				</a>
-			</h5>
-			<p>				<a id="link2H_4_0029" name="link2H_4_0029">
-					<!-- H2 anchor -->
-				</a>
-</p>
-			<div style="height: 4em;">
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-			</div>
+			<hr/>
+			<p>For the amusement of such as have been interested by the preceding sketch, taken down from my own observation, and who may wish to know a little more about the mysteries of <span epub:type="z3998:place">London</span>, I subjoin a modicum of local history put into my hands by an odd-looking old gentleman, in a small brown wig and a snuff-colored coat, with whom I became acquainted shortly after my visit to the Charter House. I confess I was a little dubious at first whether it was not one of those apocryphal tales often passed off upon inquiring travellers like myself, and which have brought our general character for veracity into such unmerited reproach. On making proper inquiries, however, I have received the most satisfactory assurances of the author’s probity, and indeed have been told that he is actually engaged in a full and particular account of the very interesting region in which he resides, of which the following may be considered merely as a foretaste.</p>
 		</section>
 	</body>
 </html>
